# chip8emu

./: COPYRIGHT  Cargo.toml  rustfmt.toml
.github/workflows/: main.yml
docs/: C8TECH10.HTM
interpreter/: Cargo.toml
interpreter/src/: main.rs
src/: alloc.rs  cpu.rs  display.rs  keypad.rs  lib.rs  memory.rs  num.rs  opcode.rs  register.rs  stack.rs  timer.rs
src/display/: tests.rs
src/memory/: tests.rs
src/num/: tests.rs
src/stack/: tests.rs
test_roms/skosulor/: README.txt
